libs/extractor/src/snapshots/extractor__tests__extract_style_props_with_class_name-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box as C} from '@devup-ui/core'\n        <C padding={1} margin={2} className={\"a\"+\"b\"} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupClass85) => <div className={`${__devupClass85 || \"\"} OLpadding-v4px OLmargin-v8px`} />)(\"a\" + \"b\");\n",
}
