libs/extractor/src/snapshots/extractor__tests__extract_wrong_responsive_style_props.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box padding={[NaN,undefined,null]} margin={Infinity} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupAssignment52) => <div className={__devupAssignment52?.[0] ?? \"\"} style={{ ...__devupAssignment52?.[1] }} />)(((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(NaN), ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(undefined), ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null)));\n",
}
