libs/extractor/src/snapshots/extractor__tests__import_wrong_component-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {W, useTheme} from '@devup-ui/core';\nuseTheme();\n        \"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import { W, useTheme } from \"@devup-ui/core\";\nuseTheme();\n",
}
